# my-llm-lab

./: .envrc  .gitignore  README.md  day_1_tiny_autograd_package.md  main.py  pyproject.toml  setup.py
core/: __init__.py  _setup.py  attention.py  layer.py  losses.py  mlp.py  neuron.py  nn_vectorized.py  optimizer.py  setup.py  tensor_ops.py  tokenizer.py  training.py  transformer.py
project_specs/: README.md  day_2_vector_matrix_operations.md  day_3_attention_mechanism.md  day_4_transformer.md  day_5_tokenizer_training.md
projects/day1_5_neural_net/: .gitignore  Makefile  README.md
projects/day1_5_neural_net/50_eval/: xor_demo.py
projects/day1_autograd/: Makefile  README.md  pyproject.toml
projects/day2_vector_matrix/: Makefile  README.md  requirements.txt
projects/day3_attention/: Makefile  README.md  requirements.txt
projects/day4_transformer/: Makefile  README.md
projects/day5_tokenizer_training/: Makefile  README.md
projects/llm_practice/: README.md  requirements.txt
projects/mini_gpt/: README.md  analyze.py  debug_speed.py  generate.py  model.py  train.py  train_fast.py
tiny_autograd_project/: README.md  requirements.txt  tiny_autograd_tutorial.ipynb
tiny_autograd_project/50_eval/: smoke.py
tiny_autograd_project/study_notes/: 02_implementation_guide.md  03_daily_practice.md
tiny_autograd_project/tests/: test_value.py
tiny_neural_net/: README.md  requirements.txt
tiny_neural_net/50_eval/: xor_demo.py
tiny_neural_net/_10_core/: __init__.py
tiny_neural_net/notebooks/: nn_tutorial.ipynb
tiny_neural_net/tests/: test_nn.py
(+81 files in other folders)
