[project]
name = "my-llm-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.20",
    "gymnasium[box2d]>=1.2.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.6",
    "numpy>=1.24.3",
    "onnx>=1.19.0",
    "onnxruntime>=1.22.1",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
]
